# mybot

./: .env.prod  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  deploy.yml
src/plugins/GPT/: GPT_request.py  __init__.py
src/plugins/exGPT/: __init__.py  exGPT_request.py
src/plugins/reborn/: __init__.py  reborn.py
