[project]
name = "mybot"
version = "0.1.0"
description = "mybot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_russian", "nonebot_plugin_auto_teenstudy", "nonebot_plugin_asoulcnki", "nonebot_plugin_ddcheck"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
